# module-7-meirthmh777

./: .coverage  .env  Dump20240308.rar  README.md  env.txt  pyproject.toml  zoo_api.sql
app/: __init__.py
app/connectors/: connector.py
app/controllers/: animal_controller.py  employee_controller.py  employee_register_controller.py  user_home.py
app/model/: AnimalModel.py  EmployeeModel.py  EmployeeRegisterModel.py
app/models/: user_home.py
app/schema/: AnimalsSchemas.py  EmployeesSchemas.py
app/templates/: animal_home.html  employee_home.html  employee_login.html  employee_register.html  user_home.html  user_login.html
app/views/animal/: AnimalView.py  AnimalsView.py
app/views/employee/: EmployeeView.py  EmployeesView.py
instance/: data.db
migrations/versions/: bbe4f96d8603_.py
tests/: conftest.py
tests/model/: test_AnimalModel.py  test_EmployeeModel.py
tests/views/animal/: test_AnimalView.py  test_AnimalsViews.py
tests/views/employee/: test_EMployeeView.py  test_EmployeesView.py
